--- a/code.html
+++ b/code.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Bryce Wong</title>
+<title>Code</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -216,16 +216,49 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Bryce Wong</h1>
+<h1 class="title toc-ignore">Code</h1>
 
 </div>
 
 
-<div id="about-bryce-sheherhers" class="section level3">
-<h3>About Bryce (she/her/hers):</h3>
-<p>MPH candidate interested in the social dynamics of public health, technology, and media.</p>
-<p>See my <a href="CV.html">CV here</a></p>
-</div>
+<pre class="r"><code>library(tidyverse)</code></pre>
+<pre><code>## -- Attaching packages --- tidyverse 1.2.1 --</code></pre>
+<pre><code>## v ggplot2 3.0.0     v purrr   0.2.5
+## v tibble  1.4.2     v dplyr   0.7.6
+## v tidyr   0.8.1     v stringr 1.3.1
+## v readr   1.1.1     v forcats 0.3.0</code></pre>
+<pre><code>## -- Conflicts ------ tidyverse_conflicts() --
+## x dplyr::filter() masks stats::filter()
+## x dplyr::lag()    masks stats::lag()</code></pre>
+<pre class="r"><code>library(viridis)</code></pre>
+<pre><code>## Loading required package: viridisLite</code></pre>
+<pre class="r"><code>library(p8105.datasets)
+library(plotly)</code></pre>
+<pre><code>## 
+## Attaching package: &#39;plotly&#39;</code></pre>
+<pre><code>## The following object is masked from &#39;package:ggplot2&#39;:
+## 
+##     last_plot</code></pre>
+<pre><code>## The following object is masked from &#39;package:stats&#39;:
+## 
+##     filter</code></pre>
+<pre><code>## The following object is masked from &#39;package:graphics&#39;:
+## 
+##     layout</code></pre>
+<pre class="r"><code>set.seed(1)
+
+data(nyc_airbnb)
+nyc_airbnb = 
+  nyc_airbnb %&gt;% 
+  mutate(rating = review_scores_location / 2) %&gt;%
+  select(boro = neighbourhood_group, neighbourhood, rating, price, room_type,
+         latitude, longitude) %&gt;%
+  filter(!is.na(rating), 
+         boro == &quot;Manhattan&quot;,
+         room_type == &quot;Entire home/apt&quot;,
+         price %in% 100:500)  %&gt;% 
+  sample_n(5000)</code></pre>
+<p>He often prefers to use plotly itself, rather than ggplot converted to plotly using ggplotly - when using plots for external use</p>
 
 
 
