--- a/code.html
+++ b/code.html
@@ -251,14 +251,15 @@ library(plotly)</code></pre>
 <pre><code>## The following object is masked from &#39;package:graphics&#39;:
 ## 
 ##     layout</code></pre>
-<pre class="r"><code>data(rest_inspec)
+<pre class="r"><code>set.seed(1)
+
+data(rest_inspec)
 rest_inspec = rest_inspec %&gt;% 
   rename(rest_name = dba, id = camis) %&gt;% 
   separate(grade_date, into = c(&quot;year&quot;, &quot;month&quot;, &quot;day&quot;), sep = &quot;-&quot;) %&gt;% select(action, boro, id, critical_flag, cuisine_description,
          rest_name, inspection_type, score, grade, year, zipcode) %&gt;%
   filter(!is.na(grade), !is.na(year), year %in% 2013:2017) %&gt;% 
-  sample_n(5000) %&gt;% 
-  arrange(year)</code></pre>
+  sample_n(5000)</code></pre>
 
 
 
