--- a/CV.html
+++ b/CV.html
@@ -242,7 +242,7 @@ $(document).ready(function () {
 <h4>Bachelor of Science | March 2017 | University of California, Los Angeles</h4>
 <ul>
 <li>Major: Cognitive Science</li>
-<li>Major: Magna Cum Laude, Dean’s Honors List</li>
+<li>Awards: Magna Cum Laude, Dean’s Honors List</li>
 <li>Relevant coursework: Health Psychology; Advanced Programming; Machine Learning in Brain Science</li>
 </ul>
 </div>
