--- a/CV.html
+++ b/CV.html
@@ -235,7 +235,7 @@ $(document).ready(function () {
 <li>Department: Sociomedical Sciences</li>
 <li>Certificate: Applied Biostatistics</li>
 <li>Awards: Dr. Jack Elinson Scholarship recipient</li>
-<li>Relevant coursework: New Media and Health; Quantitative Research Methods for Social Sciences; Health Promotion: Theory, Research, and Practice; Data Science I; Analysis of Categorical Variables</li>
+<li>Relevant coursework: New Media and Health; Quantitative Research Methods for Social Sciences; Health Promotion: Theory, Research, and Practice; Data Science I; Analysis of Categorical Variables; Machine Learning for Social Sciences</li>
 </ul>
 </div>
 <div id="bachelor-of-science-march-2017-university-of-california-los-angeles" class="section level4">
@@ -247,33 +247,50 @@ $(document).ready(function () {
 </ul>
 </div>
 </div>
-<div id="relevant-experience" class="section level3">
-<h3>Relevant Experience</h3>
-<div id="digital-health-intern-aids-institute-jan.-2018-present" class="section level4">
-<h4>Digital Health Intern | AIDS Institute | Jan. 2018-Present</h4>
+<div id="skills" class="section level3">
+<h3>Skills</h3>
 <ul>
-<li>Creates and manages social media strategies for the Y Get It? (YGI) project, which focuses on linking HIV-affected youth to care through a mobile application intervention and a comic serial, “Tested.”<br />
-</li>
-<li>Organizes and facilitates conference events and administrative tasks for the Clinical Education Initiative (CEI), which implements telehealth programs for clinicians across New York state.</li>
-<li>Develops evaluation summaries and research ideas with the CEI and YGI evaluation teams.</li>
+<li>Statistical Software: Working experience with SAS, R, and Python</li>
+<li>Computer: Experienced in Microsoft Word, Excel, and PowerPoint for both Mac and PC; working experience with the Adobe Creative Suite</li>
+<li>Research Experience: Experienced in conducting literature reviews, writing research proposals, and collecting and analyzing data</li>
+<li>Interests: Ethical frameworks for big data, machine learning and algorithmic tools in public health, narrative and storytelling in public health promotion</li>
 </ul>
 </div>
-<div id="vp-of-external-communication-mailman-healthcare-data-analytics-club-jan.-2018-present" class="section level4">
-<h4>VP of External Communication | Mailman Healthcare Data Analytics Club | Jan. 2018-Present</h4>
+<div id="digital-health-experience" class="section level3">
+<h3>Digital Health Experience</h3>
+<div id="nysdohs-aids-institute-digital-health-intern-jan-2018---present" class="section level4">
+<h4>NYSDOH’s AIDS Institute | Digital Health Intern | Jan 2018 - Present</h4>
 <ul>
-<li>Engages in event programming, including advertising and logistics needs, for events designed to elevate the analytical skill sets of the Mailman student body and ultimately improve data-driven healthcare decisions in future careers.</li>
-<li>Serves as the direct liaison to alumni and external organizations for event planning and management.</li>
+<li>Create and manage social media strategies for the Y Get It? (YGI) project, which focuses on linking HIV-affected youth to care through a mobile application intervention and a comic serial, “Tested”<br />
+</li>
+<li>Organize and facilitate conference events and administrative tasks for the Clinical Education Initiative (CEI), which implements telehealth programs for clinicians across New York State</li>
+<li>Develop and lead presentations on new tools and technologies for digital health promotion</li>
 </ul>
 </div>
 </div>
 <div id="research-experience" class="section level3">
 <h3>Research Experience</h3>
-<div id="research-fellow-lerner-center-for-public-health-promotion-june-2018-present" class="section level4">
-<h4>Research Fellow | Lerner Center for Public Health Promotion | June 2018-Present</h4>
+<div id="lerner-center-for-public-health-promotion-research-fellow-june---dec-2018" class="section level4">
+<h4>Lerner Center for Public Health Promotion | Research Fellow | June - Dec 2018</h4>
 <ul>
-<li>Assists with coding, analyzing, and interpreting point-of-sale advertising data for tobacco products in New York City.</li>
-<li>Contributes to the development of a study on social media advertising for marijuana vaporizer pens.</li>
-<li>Provides support for a menstrual health product content analysis study by collecting advertising data.</li>
+<li>Assisted with coding, analyzing, and interpreting point-of-sale advertising data for tobacco products in New York City.</li>
+<li>Identified research questions, developed survey instruments, and coded data to explore social media advertising for marijuana vaporizer pens.</li>
+</ul>
+</div>
+</div>
+<div id="leadership-experience" class="section level3">
+<h3>Leadership Experience</h3>
+<div id="mailman-healthcare-data-analytics-club-vp-of-external-communication-jan---dec-2018" class="section level4">
+<h4>Mailman Healthcare Data Analytics Club | VP of External Communication | Jan - Dec 2018</h4>
+<ul>
+<li>Engaged in event programming, including advertising and logistics needs, for events designed to elevate the analytical skill sets of the Mailman student body and ultimately improve data-driven healthcare decisions in future careers</li>
+</ul>
+</div>
+<div id="columbia-university-bard-hall-players-stage-manager-jan-dec-2018" class="section level4">
+<h4>Columbia University Bard Hall Players | Stage Manager | Jan – Dec 2018</h4>
+<ul>
+<li>Organized and maintained rehearsal schedules, events, and creative team communication for musical and stage productions with the interschool medical center campus theater group</li>
+<li>Led the efficient and smooth implementation of backstage and onstage operations for performances</li>
 </ul>
 </div>
 </div>
