--- a/CV.html
+++ b/CV.html
@@ -250,8 +250,8 @@ $(document).ready(function () {
 <div id="skills" class="section level3">
 <h3>Skills</h3>
 <ul>
-<li>Statistical Software: Working experience with SAS, R, and Python</li>
-<li>Computer: Experienced in Microsoft Word, Excel, and PowerPoint for both Mac and PC; working experience with the Adobe Creative Suite</li>
+<li>Statistical Software: Experienced with SAS, R, Python, HTML5, CSS, Javascript, and C++</li>
+<li>Computer: Experienced in Microsoft Word, Excel, and PowerPoint for both Mac and PC; proficient with the Adobe Creative Suite</li>
 <li>Research Experience: Experienced in conducting literature reviews, writing research proposals, and collecting and analyzing data</li>
 <li>Interests: Ethical frameworks for big data, machine learning and algorithmic tools in public health, narrative and storytelling in public health promotion</li>
 </ul>
@@ -263,7 +263,7 @@ $(document).ready(function () {
 <ul>
 <li>Create and manage social media strategies for the Y Get It? (YGI) project, which focuses on linking HIV-affected youth to care through a mobile application intervention and a comic serial, “Tested”<br />
 </li>
-<li>Organize and facilitate conference events and administrative tasks for the Clinical Education Initiative (CEI), which implements telehealth programs for clinicians across New York State</li>
+<li>To improve program evaluation, create web-scraping algorithms and perform quantitative and qualitative analysis on collected social media comment data.</li>
 <li>Develop and lead presentations on new tools and technologies for digital health promotion</li>
 </ul>
 </div>
@@ -280,17 +280,24 @@ $(document).ready(function () {
 </div>
 <div id="leadership-experience" class="section level3">
 <h3>Leadership Experience</h3>
+<div id="columbia-university-bard-hall-players-stage-manager-jan-present" class="section level4">
+<h4>Columbia University Bard Hall Players | Stage Manager | Jan – Present</h4>
+<ul>
+<li>Organize and maintain rehearsal schedules, events, and creative team communication for musical and stage productions with the interschool medical center campus theater group</li>
+<li>Lead the efficient and smooth implementation of backstage and onstage operations for performances</li>
+</ul>
+</div>
 <div id="mailman-healthcare-data-analytics-club-vp-of-external-communication-jan---dec-2018" class="section level4">
 <h4>Mailman Healthcare Data Analytics Club | VP of External Communication | Jan - Dec 2018</h4>
 <ul>
 <li>Engaged in event programming, including advertising and logistics needs, for events designed to elevate the analytical skill sets of the Mailman student body and ultimately improve data-driven healthcare decisions in future careers</li>
 </ul>
 </div>
-<div id="columbia-university-bard-hall-players-stage-manager-jan-dec-2018" class="section level4">
-<h4>Columbia University Bard Hall Players | Stage Manager | Jan – Dec 2018</h4>
+<div id="tau-beta-sigma-epsilon-kappa-chapter-webmaster-sept-2014-june-2017" class="section level4">
+<h4>Tau Beta Sigma, Epsilon Kappa Chapter | Webmaster | Sept 2014 – June 2017</h4>
 <ul>
-<li>Organized and maintained rehearsal schedules, events, and creative team communication for musical and stage productions with the interschool medical center campus theater group</li>
-<li>Led the efficient and smooth implementation of backstage and onstage operations for performances</li>
+<li>Redesigned site theme and content to improve user experience and navigation, including introducing an interactive family tree with D3.js and systematized profile pages with dynamic elements using HTML5</li>
+<li>Worked to integrate GSuite into the officer board’s email and online organizational tools</li>
 </ul>
 </div>
 </div>
