--- a/index.html
+++ b/index.html
@@ -231,10 +231,10 @@ $(document).ready(function () {
 <p><img src="images/profile.jpg" style="width:35%; margin-right: 50px" align="left"></p>
 <div id="about-bryce-sheherhers" class="section level3">
 <h3>About Bryce (she/her/hers):</h3>
-<p>MPH candidate interested in the social dynamics of public health, technology, and media.</p>
-<p>My thesis explores the ethical implications of big data for public health. I’m primarily interested in using qualitative research methods to investigate:</p>
+<p>MPH candidate passionate about the social dynamics of public health, technology, and data.</p>
+<p>My thesis explores the ethical implications of big data for public health. I’m proposing the use of qualitative research methods to investigate:</p>
 <ul>
-<li>The perceptions and agendas influencing biostatisticians and computer scientists working in this field</li>
+<li>The perceptions and agendas influencing biostatisticians and data scientists working in this field</li>
 <li>How data infrastructures are designed and managed for health technology</li>
 <li>The potential impact of such design and management choices on issues of normalization, oppression, and empowerment</li>
 </ul>
