--- a/CV.html
+++ b/CV.html
@@ -229,8 +229,8 @@ $(document).ready(function () {
 
 <div id="education" class="section level3">
 <h3>Education</h3>
-<div id="master-of-public-health-expected-may-2019-columbia-university-mailman-sph" class="section level4">
-<h4>Master of Public Health | Expected May 2019 | Columbia University Mailman SPH</h4>
+<div id="master-of-public-health-may-2019-columbia-university-mailman-sph" class="section level4">
+<h4>Master of Public Health | May 2019 | Columbia University Mailman SPH</h4>
 <ul>
 <li>Department: Sociomedical Sciences</li>
 <li>Certificate: Applied Biostatistics</li>
