--- a/CV.html
+++ b/CV.html
@@ -227,6 +227,15 @@ $(document).ready(function () {
 </div>
 
 
+<div id="experience" class="section level3">
+<h3>Experience</h3>
+<div id="crossix-solutions-inc-lead-marketing-data-analyst-june-2019---present" class="section level4">
+<h4>Crossix Solutions Inc | Lead Marketing Data Analyst | June 2019 - Present</h4>
+<ul>
+<li>I conduct impact analyses for pharmaceutical marketing campaigns, linking health data and consumer data together using privacy-safe technology</li>
+</ul>
+</div>
+</div>
 <div id="education" class="section level3">
 <h3>Education</h3>
 <div id="master-of-public-health-may-2019-columbia-university-mailman-sph" class="section level4">
@@ -253,6 +262,7 @@ $(document).ready(function () {
 <li>Statistical Software: Experienced with SAS, R, Python, HTML5, CSS, Javascript, and C++</li>
 <li>Computer: Experienced in Microsoft Word, Excel, and PowerPoint for both Mac and PC; proficient with the Adobe Creative Suite</li>
 <li>Research Experience: Experienced in conducting literature reviews, writing research proposals, and collecting and analyzing data</li>
+<li>Peer-reviewed journal publications: Giovenco, D.P., Spillane, T.E., Wong, B.A., Wackowski, O.A. (2019). Characteristics of storefront tobacco advertisements and differences by product type: A content analysis of retailers in New York City, USA. Preventive Medicine, 123, 204-207.</li>
 <li>Interests: Ethical frameworks for big data, machine learning and algorithmic tools in public health, narrative and storytelling in public health promotion</li>
 </ul>
 </div>
@@ -280,8 +290,8 @@ $(document).ready(function () {
 </div>
 <div id="leadership-experience" class="section level3">
 <h3>Leadership Experience</h3>
-<div id="columbia-university-bard-hall-players-stage-manager-jan-present" class="section level4">
-<h4>Columbia University Bard Hall Players | Stage Manager | Jan – Present</h4>
+<div id="columbia-university-bard-hall-players-stage-manager-jan-may-2019" class="section level4">
+<h4>Columbia University Bard Hall Players | Stage Manager | Jan – May 2019</h4>
 <ul>
 <li>Organize and maintain rehearsal schedules, events, and creative team communication for musical and stage productions with the interschool medical center campus theater group</li>
 <li>Lead the efficient and smooth implementation of backstage and onstage operations for performances</li>
