--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@ $(document).ready(function () {
 <div id="about-bryce-sheherhers" class="section level3">
 <h3>About Bryce (she/her/hers):</h3>
 <p>MPH graduate and current data analyst at Crossix - passionate about the social dynamics of public health, technology, and data.</p>
-<p>My thesis explores the ethical implications of big data for public health. I’m proposing the use of qualitative research methods to investigate:</p>
+<p>My thesis explores the ethical implications of big data for public health. I propose the use of qualitative research methods to investigate:</p>
 <ul>
 <li>The perceptions and agendas influencing biostatisticians and data scientists working in this field</li>
 <li>How data infrastructures are designed and managed for health technology</li>
