updating to include projects

--- a/CV.html
+++ b/CV.html
@@ -311,6 +311,23 @@ $(document).ready(function () {
 </ul>
 </div>
 </div>
+<div id="projects" class="section level3">
+<h3>Projects</h3>
+<div id="mount-sinai-health-hackathon-2019-team-blackbox-ai-oct.-2019" class="section level4">
+<h4>Mount Sinai Health Hackathon 2019 | Team Blackbox AI | Oct. 2019</h4>
+<ul>
+<li>Worked with a team to design and create a website that uses video lessons, interactive statistical graphs, and written descriptions to educate clinicians on the application and interpretation of artificial intelligence in healthcare settings</li>
+<li>I contributed to the brainstorming of the project execution and wrote HTML in Dash to create a functioning mock-up of the website</li>
+</ul>
+</div>
+<div id="datakind-microsoft-virtual-datadive-applying-ai-to-societal-challenges-in-us-cities-miami-project-oct.-2019" class="section level4">
+<h4>Datakind + Microsoft Virtual DataDive: Applying AI to Societal Challenges in US Cities | Miami Project | Oct. 2019</h4>
+<ul>
+<li>Volunteered data science expertise with fellow DataDive participants to help Code for Miami and the city of Miami create an API for their gethousing.org site. The goal of the API allows developers to digitally track housing applications by predicting the number of days an application will be in review</li>
+<li>Using data from Miami’s open data portal, I wrote and tuned several types of linear models in both R and Python to support the project’s exploration of predictive models</li>
+</ul>
+</div>
+</div>
 
 
 
