Added collabathon to the CV page

--- a/CV.html
+++ b/CV.html
@@ -313,6 +313,14 @@ $(document).ready(function () {
 </div>
 <div id="projects" class="section level3">
 <h3>Projects</h3>
+<div id="open-climate-collabathon-2019-consumer-disclosure-team-dec.-2019" class="section level4">
+<h4>Open Climate Collabathon 2019 | Consumer Disclosure Team | Dec. 2019</h4>
+<ul>
+<li>Member of the the Consumer Disclosure team for the 2019 Open Climate Collabathon hosted by the Yale OpenLab.</li>
+<li>I guided the writing of an overarching framework for the development and reporting of a “sustainability score” that could be used to grade the supply chain of a consumer product. The team also developed a proof-of-concept widget that could be added as a browser extension to report these scores on consumer websites.</li>
+<li>We won the Community Choice award and the Most Innovative Contribution Award.</li>
+</ul>
+</div>
 <div id="mount-sinai-health-hackathon-2019-team-blackbox-ai-oct.-2019" class="section level4">
 <h4>Mount Sinai Health Hackathon 2019 | Team Blackbox AI | Oct. 2019</h4>
 <ul>
