Updated the collabathon with a link

--- a/CV.html
+++ b/CV.html
@@ -268,13 +268,13 @@ $(document).ready(function () {
 </div>
 <div id="digital-health-experience" class="section level3">
 <h3>Digital Health Experience</h3>
-<div id="nysdohs-aids-institute-digital-health-intern-jan-2018---present" class="section level4">
-<h4>NYSDOH’s AIDS Institute | Digital Health Intern | Jan 2018 - Present</h4>
+<div id="nysdohs-aids-institute-digital-health-intern-jan-2018---june-2019" class="section level4">
+<h4>NYSDOH’s AIDS Institute | Digital Health Intern | Jan 2018 - June 2019</h4>
 <ul>
-<li>Create and manage social media strategies for the Y Get It? (YGI) project, which focuses on linking HIV-affected youth to care through a mobile application intervention and a comic serial, “Tested”<br />
+<li>Created and managed social media strategies for the Y Get It? (YGI) project, which focuses on linking HIV-affected youth to care through a mobile application intervention and a comic serial, “Tested”<br />
 </li>
-<li>To improve program evaluation, create web-scraping algorithms and perform quantitative and qualitative analysis on collected social media comment data.</li>
-<li>Develop and lead presentations on new tools and technologies for digital health promotion</li>
+<li>To improve program evaluation, created web-scraping algorithms and performed quantitative and qualitative analysis on collected social media comment data.</li>
+<li>Developed and led presentations on new tools and technologies for digital health promotion</li>
 </ul>
 </div>
 </div>
@@ -293,8 +293,8 @@ $(document).ready(function () {
 <div id="columbia-university-bard-hall-players-stage-manager-jan-may-2019" class="section level4">
 <h4>Columbia University Bard Hall Players | Stage Manager | Jan – May 2019</h4>
 <ul>
-<li>Organize and maintain rehearsal schedules, events, and creative team communication for musical and stage productions with the interschool medical center campus theater group</li>
-<li>Lead the efficient and smooth implementation of backstage and onstage operations for performances</li>
+<li>Organized and maintained rehearsal schedules, events, and creative team communication for musical and stage productions with the interschool medical center campus theater group</li>
+<li>Led the efficient and smooth implementation of backstage and onstage operations for performances</li>
 </ul>
 </div>
 <div id="mailman-healthcare-data-analytics-club-vp-of-external-communication-jan---dec-2018" class="section level4">
@@ -314,7 +314,7 @@ $(document).ready(function () {
 <div id="projects" class="section level3">
 <h3>Projects</h3>
 <div id="open-climate-collabathon-2019-consumer-disclosure-team-dec.-2019" class="section level4">
-<h4>Open Climate Collabathon 2019 | Consumer Disclosure Team | Dec. 2019</h4>
+<h4>Open Climate Collabathon 2019 | <a href="https://collabathon-docs.openclimate.earth/hacks/team-contributions/consumer-disclosure-and-sustainable-supply-chains">Consumer Disclosure Team</a> | Dec. 2019</h4>
 <ul>
 <li>Member of the the Consumer Disclosure team for the 2019 Open Climate Collabathon hosted by the Yale OpenLab.</li>
 <li>I guided the writing of an overarching framework for the development and reporting of a “sustainability score” that could be used to grade the supply chain of a consumer product. The team also developed a proof-of-concept widget that could be added as a browser extension to report these scores on consumer websites.</li>
