Updated resume with thesis and specialization

--- a/CV.html
+++ b/CV.html
@@ -267,8 +267,7 @@ $(document).ready(function () {
 <li>Statistical Software: Experienced with SQL, R, Python, SAS</li>
 <li>Computer: Experienced in Microsoft Word, Excel, and PowerPoint for both Mac and PC; proficient with web development (HTML5 and CSS)</li>
 <li>Research Experience: Experienced in conducting literature reviews, writing research proposals, and collecting and analyzing data</li>
-<li>Peer-reviewed journal publications: Giovenco, D.P., Spillane, T.E., Wong, B.A., Wackowski, O.A. (2019). Characteristics of storefront tobacco advertisements and differences by product type: A content analysis of retailers in New York City, USA. Preventive Medicine, 123, 204-207.</li>
-<li>Interests: Ethical frameworks for big data, machine learning and algorithmic tools in public health, narrative and storytelling in public health promotion</li>
+<li>Peer-reviewed journal publications: <em>Giovenco, D.P., Spillane, T.E., Wong, B.A., Wackowski, O.A. (2019). Characteristics of storefront tobacco advertisements and differences by product type: A content analysis of retailers in New York City, USA. Preventive Medicine, 123, 204-207.</em></li>
 </ul>
 </div>
 <div id="education" class="section level3">
@@ -279,15 +278,15 @@ $(document).ready(function () {
 <li>Department: Sociomedical Sciences</li>
 <li>Certificate: Applied Biostatistics</li>
 <li>Awards: Dr. Jack Elinson Scholarship recipient</li>
-<li>Relevant coursework: New Media and Health; Quantitative Research Methods for Social Sciences; Health Promotion: Theory, Research, and Practice; Data Science I; Analysis of Categorical Variables; Machine Learning for Social Sciences</li>
+<li>Thesis: <em>How Data Determines Health: A Qualitative Research Proposal Exploring Perceptions of Big Data in Public Health</em></li>
 </ul>
 </div>
 <div id="bachelor-of-science-march-2017-university-of-california-los-angeles" class="section level4">
 <h4>Bachelor of Science | March 2017 | University of California, Los Angeles</h4>
 <ul>
 <li>Major: Cognitive Science</li>
+<li>Specialization in Computing</li>
 <li>Awards: Magna Cum Laude, Dean’s Honors List</li>
-<li>Relevant coursework: Health Psychology; Advanced Programming; Machine Learning in Brain Science</li>
 </ul>
 </div>
 </div>
