updating spelling mistakes and sentence flow in resume

--- a/CV.html
+++ b/CV.html
@@ -233,9 +233,9 @@ $(document).ready(function () {
 <h4>Crossix, A Veeva Company | Lead Marketing Data Analyst | June 2019 - Present</h4>
 <ul>
 <li>Own the end-to-end analysis of the effects of life sciences marketing on health behaviors by leveraging a comprehensive data network through Crossix’s privacy-safe technology</li>
-<li>Oversee the projects of newer analysts through the technical process and communication with collaborating teams</li>
-<li>Lead the development of Spotfire visualization dashboards, improved agile project management, and troubleshooting/bug-tracking workflows and tools</li>
-<li>Take point on the ingestion, exploration, and packaging of data for insights into the impact of COVID-19 on marketing trends</li>
+<li>Responsible for reviewing project deliverables for newer analysts as well as providing guidance on technical, conceptual, and communciation-related processes</li>
+<li>Lead the development of Spotfire visualization dashboards and improve agile project management along with troubleshooting/bug-tracking workflows</li>
+<li>Ingest, explore, and package data for insights into the impact of COVID-19 on marketing trends</li>
 </ul>
 </div>
 </div>
@@ -261,8 +261,8 @@ $(document).ready(function () {
 </ul>
 </div>
 </div>
-<div id="skills" class="section level3">
-<h3>Skills</h3>
+<div id="skills-publications" class="section level3">
+<h3>Skills + Publications</h3>
 <ul>
 <li>Statistical Software: Experienced with SQL, R, Python, SAS</li>
 <li>Computer: Experienced in Microsoft Word, Excel, and PowerPoint for both Mac and PC; proficient with web development (HTML5 and CSS)</li>
@@ -311,7 +311,7 @@ $(document).ready(function () {
 <div id="datakind-microsoft-virtual-datadive-applying-ai-to-societal-challenges-in-us-cities-miami-project-oct.-2019" class="section level4">
 <h4>Datakind + Microsoft Virtual DataDive: Applying AI to Societal Challenges in US Cities | Miami Project | Oct. 2019</h4>
 <ul>
-<li>Member of Miami Project team, comprised of data science and analysis volunteers in collaboration with the Code for Miami organization to implement AI in Cities</li>
+<li>Member of the Miami Project team, comprised of data science and analysis volunteers in collaboration with the Code for Miami organization to implement AI in Cities</li>
 <li>Engaged in exploratory data analysis, built/tested machine learning models, and stood up an API for the project partner to gain insight from.</li>
 </ul>
 </div>
