More edits to improve resume reading

--- a/CV.html
+++ b/CV.html
@@ -232,10 +232,10 @@ $(document).ready(function () {
 <div id="crossix-a-veeva-company-lead-marketing-data-analyst-june-2019---present" class="section level4">
 <h4>Crossix, A Veeva Company | Lead Marketing Data Analyst | June 2019 - Present</h4>
 <ul>
-<li>Own the end-to-end analysis of the effects of life sciences marketing on health behaviors by leveraging a comprehensive data network through Crossix’s privacy-safe technology</li>
-<li>Responsible for reviewing project deliverables for newer analysts as well as providing guidance on technical, conceptual, and communciation-related processes</li>
-<li>Lead the development of Spotfire visualization dashboards and improve agile project management along with troubleshooting/bug-tracking workflows</li>
-<li>Ingest, explore, and package data for insights into the impact of COVID-19 on marketing trends</li>
+<li>Own the end-to-end analysis of the effects of life sciences marketing on health behaviors by leveraging a comprehensive data network through Crossix’s privacy-safe technology.</li>
+<li>Responsible for reviewing project deliverables for newer analysts as well as providing guidance on technical, conceptual, and communciation-related processes.</li>
+<li>Lead the development of Spotfire visualization dashboards, improved agile project management systems, and more efficient troubleshooting/bug-tracking workflows.</li>
+<li>To write a blog series providing insight into the impact of COVID-19 on marketing trends, work with marketing team members, analtyical product developers, product strategy directors to ingest, explore, and package data for insights into the impact of COVID-19 on marketing trends.</li>
 </ul>
 </div>
 </div>
@@ -244,10 +244,10 @@ $(document).ready(function () {
 <div id="nysdohs-aids-institute-digital-health-intern-jan-2018---june-2019" class="section level4">
 <h4>NYSDOH’s AIDS Institute | Digital Health Intern | Jan 2018 - June 2019</h4>
 <ul>
-<li>Created and managed social media strategies for the Y Get It? (YGI) project, which focuses on linking HIV-affected youth to care through a mobile application intervention and a comic serial, “Tested”<br />
+<li>Created and managed social media strategies for the Y Get It? (YGI) project, which focuses on linking HIV-affected youth to care through a mobile application intervention and a comic serial, “Tested.”<br />
 </li>
 <li>To improve program evaluation, created web-scraping algorithms and performed quantitative and qualitative analysis on collected social media comment data.</li>
-<li>Developed and led presentations on new tools and technologies for digital health promotion</li>
+<li>Developed and led presentations on new tools and technologies for digital health promotion.</li>
 </ul>
 </div>
 </div>
@@ -258,6 +258,7 @@ $(document).ready(function () {
 <ul>
 <li>Assisted with coding, analyzing, and interpreting point-of-sale advertising data for tobacco products in New York City.</li>
 <li>Identified research questions, developed survey instruments, and coded data to explore social media advertising for marijuana vaporizer pens.</li>
+<li>Supported the reviewing and editing of manuscripts for publication.</li>
 </ul>
 </div>
 </div>
@@ -311,8 +312,8 @@ $(document).ready(function () {
 <div id="datakind-microsoft-virtual-datadive-applying-ai-to-societal-challenges-in-us-cities-miami-project-oct.-2019" class="section level4">
 <h4>Datakind + Microsoft Virtual DataDive: Applying AI to Societal Challenges in US Cities | Miami Project | Oct. 2019</h4>
 <ul>
-<li>Member of the Miami Project team, comprised of data science and analysis volunteers in collaboration with the Code for Miami organization to implement AI in Cities</li>
-<li>Engaged in exploratory data analysis, built/tested machine learning models, and stood up an API for the project partner to gain insight from.</li>
+<li>Member of the Miami Project team, comprised of volunteer data scientists and data analysts in collaboration with the Code for Miami organization to implement AI in cities.</li>
+<li>Engaged in exploratory data analysis, built/tested machine learning models, and stood up an API for the project partner to understand the variables that impact turnaround time for applications to develop affordable housing.</li>
 </ul>
 </div>
 </div>
