edited the section about covid-19 insights

--- a/CV.html
+++ b/CV.html
@@ -235,7 +235,7 @@ $(document).ready(function () {
 <li>Own the end-to-end analysis of the effects of life sciences marketing on health behaviors by leveraging a comprehensive data network through Crossix’s privacy-safe technology.</li>
 <li>Responsible for reviewing project deliverables for newer analysts as well as providing guidance on technical, conceptual, and communciation-related processes.</li>
 <li>Lead the development of Spotfire visualization dashboards, improved agile project management systems, and more efficient troubleshooting/bug-tracking workflows.</li>
-<li>To write a blog series providing insight into the impact of COVID-19 on marketing trends, work with marketing team members, analtyical product developers, product strategy directors to ingest, explore, and package data for insights into the impact of COVID-19 on marketing trends.</li>
+<li>To write a blog series providing insight into the impact of COVID-19 on marketing trends, work with marketing team members, analtyical product developers, product strategy directors to ingest, explore, and visualize data.</li>
 </ul>
 </div>
 </div>
