Made some more spelling and sentence flow fixes

--- a/CV.html
+++ b/CV.html
@@ -233,9 +233,8 @@ $(document).ready(function () {
 <h4>Crossix, A Veeva Company | Lead Marketing Data Analyst | June 2019 - Present</h4>
 <ul>
 <li>Own the end-to-end analysis of the effects of life sciences marketing on health behaviors by leveraging a comprehensive data network through Crossix’s privacy-safe technology.</li>
-<li>Responsible for reviewing project deliverables for newer analysts as well as providing guidance on technical, conceptual, and communication-related processes.</li>
-<li>Lead the development of Spotfire visualization dashboards, improved agile project management systems, and more efficient troubleshooting/bug-tracking workflows.</li>
-<li>To write a blog series providing insight into the impact of COVID-19 on marketing trends, work with marketing team members, analytical product developers, product strategy directors to ingest, explore, and visualize data.</li>
+<li>Responsible for reviewing project deliverables for newer analysts, as well as for providing guidance on technical, conceptual, and communication-related processes.</li>
+<li>Lead the development of Spotfire visualization dashboards, improved agile project management systems, and more efficient troubleshooting/bug-tracking workflows. *For industry thought leadership posts providing insight into the impact of COVID-19 on marketing trends, collaborate with marketing team members, analytical product developers, and product strategy directors to ingest, explore, and visualize data.</li>
 </ul>
 </div>
 </div>
@@ -296,16 +295,16 @@ $(document).ready(function () {
 <div id="open-climate-collabathon-2019-consumer-disclosure-team-dec.-2019" class="section level4">
 <h4>Open Climate Collabathon 2019 | <a href="https://collabathon-docs.openclimate.earth/hacks/team-contributions/consumer-disclosure-and-sustainable-supply-chains">Consumer Disclosure Team</a> | Dec. 2019</h4>
 <ul>
-<li>Winner of the Community Choice award and the Most Innovative Contribution Award</li>
+<li>Winner of the Community Choice award and the Most Innovative Contribution Award.</li>
 <li>Outlined a framework for developing and reporting a “sustainability score” that would be used to grade the supply chain of a consumer product. The team also developed a proof-of-concept widget that could be added as a browser extension to report these scores on consumer websites.</li>
 <li>Contributed to the writing of the overarching framework and helped generate an example of an application for the project (the iPhone).</li>
-<li>Joined the 2020 discussions to help facilitate project management and next steps for future Collabathons</li>
+<li>Joined the 2020 discussions to help facilitate project management and next steps for future Collabathons.</li>
 </ul>
 </div>
 <div id="mount-sinai-health-hackathon-2019-team-blackbox-ai-oct.-2019" class="section level4">
 <h4>Mount Sinai Health Hackathon 2019 | Team Blackbox AI | Oct. 2019</h4>
 <ul>
-<li>Designed and created a website that uses video lessons, interactive statistical graphs, and written descriptions to educate clinicians on the application and interpretation of artificial intelligence in healthcare settings</li>
+<li>Designed and created a website that uses video lessons, interactive statistical graphs, and written descriptions to educate clinicians on the application and interpretation of artificial intelligence in healthcare settings.</li>
 <li>Brainstormed project execution and wrote HTML in Dash to create a functioning mock-up of the website (domain no longer active).</li>
 </ul>
 </div>
