--- a/CV.html
+++ b/CV.html
@@ -234,7 +234,8 @@ $(document).ready(function () {
 <ul>
 <li>Own the end-to-end analysis of the effects of life sciences marketing on health behaviors by leveraging a comprehensive data network through Crossix’s privacy-safe technology.</li>
 <li>Responsible for reviewing project deliverables for newer analysts, as well as for providing guidance on technical, conceptual, and communication-related processes.</li>
-<li>Lead the development of Spotfire visualization dashboards, improved agile project management systems, and more efficient troubleshooting/bug-tracking workflows. *For industry thought leadership posts providing insight into the impact of COVID-19 on marketing trends, collaborate with marketing team members, analytical product developers, and product strategy directors to ingest, explore, and visualize data.</li>
+<li>Lead the development of Spotfire visualization dashboards, improved agile project management systems, and more efficient troubleshooting/bug-tracking workflows.</li>
+<li>For industry thought leadership posts providing insight into the impact of COVID-19 on marketing trends, collaborate with marketing team members, analytical product developers, and product strategy directors to ingest, explore, and visualize data.</li>
 </ul>
 </div>
 </div>
