Updated the hackathons section of the resume

--- a/CV.html
+++ b/CV.html
@@ -305,7 +305,7 @@ $(document).ready(function () {
 <div id="mount-sinai-health-hackathon-2019-team-blackbox-ai-oct.-2019" class="section level4">
 <h4>Mount Sinai Health Hackathon 2019 | Team Blackbox AI | Oct. 2019</h4>
 <ul>
-<li>Designed and created a website that uses video lessons, interactive statistical graphs, and written descriptions to educate clinicians on the application and interpretation of artificial intelligence in healthcare settings.</li>
+<li>Designed and created a website that uses video lessons, interactive statistical visualizations, and written descriptions to educate clinicians on the application and interpretation of artificial intelligence in healthcare settings.</li>
 <li>Brainstormed project execution and wrote HTML in Dash to create a functioning mock-up of the website (domain no longer active).</li>
 </ul>
 </div>
