Created a new Projects page

--- a/CV.html
+++ b/CV.html
@@ -190,10 +190,7 @@ $(document).ready(function () {
   <a href="CV.html">Resume</a>
 </li>
 <li>
-  <a href="dashboard_template.html">
-    <span class="fa fa-cutlery fa-lg"></span>
-     
-  </a>
+  <a href="Projects.html">Projects</a>
 </li>
 <li>
   <a href="mailto:&lt;brycew.hello@gmail.com&gt;">
