--- a/index.html
+++ b/index.html
@@ -190,10 +190,7 @@ $(document).ready(function () {
   <a href="CV.html">Resume</a>
 </li>
 <li>
-  <a href="dashboard_template.html">
-    <span class="fa fa-cutlery fa-lg"></span>
-     
-  </a>
+  <a href="Projects.html">Projects</a>
 </li>
 <li>
   <a href="mailto:&lt;brycew.hello@gmail.com&gt;">
@@ -231,8 +228,8 @@ $(document).ready(function () {
 <p><img src="images/profile.jpg" style="width:35%; margin-right: 50px" align="left"></p>
 <div id="about-bryce-sheherhers" class="section level3">
 <h3>About Bryce (she/her/hers):</h3>
-<p>MPH graduate and current data analyst at Crossix - passionate about the social dynamics of public health, technology, and data.</p>
-<p>My thesis explores the ethical implications of big data for public health. I propose the use of qualitative research methods to investigate:</p>
+<p>Current data analyst at Crossix and passionate about the responsible use of data science to solve the toughest problems facing society.</p>
+<p>My graduate thesis explored the ethical implications of big data for public health. I proposed the use of qualitative research methods to investigate:</p>
 <ul>
 <li>The perceptions and agendas influencing biostatisticians and data scientists working in this field</li>
 <li>How data infrastructures are designed and managed for health technology</li>
