--- a/Projects.html
+++ b/Projects.html
@@ -11,7 +11,7 @@
 
 
 
-<title></title>
+<title>Projects</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -22,6 +22,9 @@
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
 <link href="site_libs/highlightjs-9.12.0/default.css" rel="stylesheet" />
 <script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
+<link href="site_libs/font-awesome-5.0.13/css/fa-svg-with-js.css" rel="stylesheet" />
+<script src="site_libs/font-awesome-5.0.13/js/fontawesome-all.min.js"></script>
+<script src="site_libs/font-awesome-5.0.13/js/fa-v4-shims.min.js"></script>
 
 <style type="text/css">code{white-space: pre;}</style>
 <style type="text/css">
@@ -216,12 +219,25 @@ $(document).ready(function () {
 
 
 
+<h1 class="title toc-ignore">Projects</h1>
 
 </div>
 
 
-<div id="bryce-wong.github.io" class="section level1">
-<h1>bryce-wong.github.io</h1>
+<div id="selected-projects" class="section level3">
+<h3>Selected Projects:</h3>
+<ul>
+<li><a href="Final_Report.html">Identification of trends and disparities in HIV/AIDS for NYC</a> (Team Project)
+<ul>
+<li>Final project as part of my data science course in my graduate program.</li>
+<li>Motivated by Governor Cuomo’s initiative for ending the AIDS epidemic in New York State by 2020 (ETE 2020), we aimed to identify key vulnerable populations in New York City (NYC) disproportionately burdened by HIV/AIDS in order to improve interventions implemented under this initiative.</li>
+<li>To that end, we utilized annual HIV/AIDS reports from NYC through the NYC Open Data database, as well as supplementary NYC geographic information. Our analyses focusrf on exploring potential health disparities across geographic and sociodemographic variables as well as understanding the current trends for HIV/AIDS across time and in relation to comorbidities, in order to understand the current state and effectiveness of HIV/AIDS interventions in NYC.</li>
+</ul></li>
+<li>While you’re in NYC, <a href="dashboard_template.html">eat here not there</a>
+<ul>
+<li>A dashboard created using flexdashboard to let you know how restaurants in NYC are keeping up with health regulations.</li>
+</ul></li>
+</ul>
 </div>
 
 
